--- a/app/src/main/res/layout/video_card_view_design.xml
+++ b/app/src/main/res/layout/video_card_view_design.xml
@@ -2,21 +2,20 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_margin="@dimen/_3sdp">
 
-    <androidx.cardview.widget.CardView
+    <FrameLayout
         android:layout_width="@dimen/_92sdp"
         android:layout_height="@dimen/_92sdp"
-        android:layout_margin="10dp"
-        app:cardCornerRadius="@dimen/_16sdp"
-        app:cardElevation="6dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <VideoView
+        <ImageView
             android:id="@+id/Videoview222"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -24,9 +23,25 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent">
 
+        </ImageView>
 
-    </androidx.cardview.widget.CardView>
+        <TextView
+            android:id="@+id/videoTime"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_12sdp"
+            android:layout_marginStart="@dimen/_20sdp"
+            android:layout_marginTop="@dimen/_80sdp"
+            android:drawableStart="@drawable/video_icon"
+            android:gravity="left"
+            android:text="Hai"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_8sdp"
+            android:textStyle="bold">
+
+        </TextView>
+
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
