--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="blue">#263ED6</color>
     <color name="selected_icon_color">#FF0000</color>
     <color name="default_icon_color">#808080</color>
-    <color name="gray">#F9F9F9</color>
+    <color name="gray">#E4E1E1</color>
     <color name="gray_text_color">#B9B9B9</color>
 
 
